--- a/Updater/MainWindow.xaml
+++ b/Updater/MainWindow.xaml
@@ -4,12 +4,33 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:viewModel="clr-namespace:MahAppBase.ViewModel"
-        xmlns:local="clr-namespace:MahAppBase"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="" Height="450" Width="800">
-    
+        Title="" Height="600" Width="800">
+    <controls:MetroWindow.Resources>
+        <DataTemplate x:Key="MainWindowTemplate">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="{Binding TaskName}" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Margin="30,10,0,0" FontSize="22"/>
+                <StackPanel  Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="50,0,0,0">
+                    <TextBlock Text="修改時間 : " Foreground="DarkGray"/>
+                    <TextBlock Text="{Binding ModifyDateTime}" Foreground="DarkGray"/>    
+                </StackPanel>
+                <StackPanel  Grid.Row="1" Grid.Column="1" Margin="50,0,0,0">
+                    <Button Content="歷程" BorderBrush="Transparent" Width="200" HorizontalAlignment="Left" Background="Transparent" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type controls:MetroWindow}}, Path=DataContext.ShowTaskLogCommand}" CommandParameter="{Binding TaskName}"/>    
+                </StackPanel>
+                <Button Content="執行" Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" Background="Transparent" BorderBrush="Transparent" Padding="20,0" FontSize="15" Margin="0,0,20,0" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type controls:MetroWindow}}, Path=DataContext.TaskExcutingCommand}" CommandParameter="{Binding TaskName}"/>
+            </Grid>
+        </DataTemplate>
+    </controls:MetroWindow.Resources>
     <controls:MetroWindow.RightWindowCommands >
         <controls:WindowCommands>
             <Button Command="{Binding ButtonDonateClickCommand}">
@@ -23,16 +44,32 @@
     </controls:MetroWindow.RightWindowCommands>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <controls:MetroAnimatedTabControl Grid.Row="0">
-            <controls:MetroTabItem Header="TabItem1">
-            </controls:MetroTabItem>
-            <controls:MetroTabItem Header="TabItem2">
-            </controls:MetroTabItem>
-            <controls:MetroTabItem Header="TabItem3">
-            </controls:MetroTabItem>
-        </controls:MetroAnimatedTabControl>
+        <TextBlock Text="可執行項目" Grid.Row="1" FontSize="30"/>
+        <ListBox Grid.Row="3" ItemTemplate="{StaticResource MainWindowTemplate}" ItemsSource="{Binding TaskItemSource}"/>
+        <Button Content="+" Grid.Row="5" FontSize="20" Width="70" HorizontalAlignment="Right" Margin="0,0,30,0"/>
     </Grid>
+    <controls:MetroWindow.Flyouts>
+        <controls:FlyoutsControl>
+            <controls:Flyout x:Name="flyoutExcuting" IsOpen="{Binding FlyOutExcutingIsOpen}" Header="Setting" Theme="Dark" Position="Right">
+                <DataGrid Margin="10,0" ItemsSource="{Binding CurrentExcuteTask}" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="項目" Binding="{Binding ItemName}" Width="100"/>
+                        <DataGridTextColumn Header="開始時間" Binding="{Binding StartTime}"  Width="100"/>
+                        <DataGridTextColumn Header="結束時間" Binding="{Binding EndTime}"  Width="100"/>
+                        <DataGridTextColumn Header="花費時間" Binding="{Binding CostTime}"  Width="100"/>
+                        <DataGridTextColumn Header="進度" Binding="{Binding Progress}"  Width="100"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </controls:Flyout>
+        </controls:FlyoutsControl>
+    </controls:MetroWindow.Flyouts>
+            
 </controls:MetroWindow>
